--- a/docs/_posts/2024-09-29-API-Rest.md
+++ b/docs/_posts/2024-09-29-API-Rest.md
@@ -6,7 +6,7 @@ categories: rest
 # Comment développer une API Rest ?
 ## Architecture REST
 
-![Architecture REST](_media/architecture-rest.webp)
+![Architecture REST](media/architecture-rest.webp)
 
 REST (Representational State Transfer) ou RESTful est un style d’architecture permettant de construire des applications (Web, Intranet, Web Service). Il s’agit d’un ensemble de conventions et de bonnes pratiques à respecter et non d’une technologie à part entière. L’architecture REST utilise les spécifications originelles du protocole HTTP.
 
@@ -155,7 +155,7 @@ $ curl http://localhost:5000/todos/todo2 -X DELETE -v
 ```
 
 ### Ajout d'une nouvelle tâche
-`` bash
+``` bash
 $ curl http://localhost:5000/todos -d '{ "task":"something new" }' -X POST -H "Content-Type: application/json" -v
 Note: Unnecessary use of -X or --request, POST is already inferred.
 *   Trying ::1...
