--- a/docs/_posts/2024-10-19-ReactJs.md
+++ b/docs/_posts/2024-10-19-ReactJs.md
@@ -1,5 +1,5 @@
 layout: post
-title: "Développer en React.js"
+title: "Développer un Front End en React.js"
 date: 2024-10-19 01:00:00 +0002
 tags: react
 
