--- a/docs/_posts/2024-10-19-NodeJs.md
+++ b/docs/_posts/2024-10-19-NodeJs.md
@@ -336,7 +336,7 @@ Vous ne pouvez pas simplement commencer à travailler avec Node.js avec une conf
 
 Le module HTTP est le module par défaut de la bibliothèque standard de Node.js. Vous pouvez utiliser ce module et commencer à coder sans installer ni gérer les dépendances externes. Mais, en l'utilisant, vous serez confronté à certains défis car ce n'est pas un module convivial par rapport aux autres.
 
-Nous avons utilisé quelques exemples de [GitHub](https://github.com/webapps-conception/nodejs-requests){:target="_blank"}, le référentiel open source de tous les codes, pour votre meilleure compréhension. Ici, nous effectuons une requête GET à l'aide de l'option client HTTP en appelant les données stockées à partir de l'API fictive [JSONPlaceholder](https://github.com/webapps-conception/nodejs-requests/blob/master/JSONPlaceholder/users){:target="_blank"}. en réponse à la demande complétée, il enverra les données des dix utilisateurs ainsi que leurs noms et identifiants. dans cet article, nous avons mentionné différents types d'exemples montrant les appels basés sur les rappels, les promesses et les asynchrones/attentes.
+Nous avons utilisé quelques exemples de [GitHub](https://github.com/webapps-conception/nodejs-requests){:target="_blank"}, le référentiel open source de tous les codes, pour votre meilleure compréhension. Ici, nous effectuons une requête GET à l'aide de l'option client HTTP en appelant les données stockées à partir de l'API fictive [JSONPlaceholder](https://raw.githubusercontent.com/webapps-conception/nodejs-requests/refs/heads/master/JSONPlaceholder/users){:target="_blank"}. en réponse à la demande complétée, il enverra les données des dix utilisateurs ainsi que leurs noms et identifiants. dans cet article, nous avons mentionné différents types d'exemples montrant les appels basés sur les rappels, les promesses et les asynchrones/attentes.
 
 Cinq méthodes différentes sont présentées pour effectuer l'appel HTTP GET vers l'API d'espace réservé. [Node.js](https://nodejs.org/fr){:target="_blank"} propose un module HTTP intégré pour effectuer plusieurs tâches liées à HTTP afin de faciliter votre travail.
 
@@ -372,7 +372,7 @@ Par exemple :
 ``` js
 const request = require('request');  
 //python requests body
-request('https://jsonplaceholder.typicode.com/users', { json: true }, (err, res, body) => { if (err) {  
+request('https://raw.githubusercontent.com/webapps-conception/nodejs-requests/refs/heads/master/JSONPlaceholder/users', { json: true }, (err, res, body) => { if (err) {  
 return console.log(err); }  
 console.log(body.url);  
 console.log(body.explanation);  
@@ -415,7 +415,7 @@ Par exemple :
 
 ``` js
 const https = require('https');
-https.get('https://jsonplaceholder.typicode.com/users', res => {
+https.get('https://raw.githubusercontent.com/webapps-conception/nodejs-requests/refs/heads/master/JSONPlaceholder/users', res => {
 let data = [];
   const headerDate = res.headers && res.headers.date ? res.headers.date : 'no response date';
   console.log('Status Code:', res.statusCode);
@@ -487,7 +487,7 @@ Dans l'exemple mentionné ci-dessous, nous appelons l'API JSON des utilisateurs 
 ``` js
 const axios = require('axios');
 //Axios get body
-axios.get('https://jsonplaceholder.typicode.com/users')
+axios.get('https://raw.githubusercontent.com/webapps-conception/nodejs-requests/refs/heads/master/JSONPlaceholder/users')
 .then(res => {
     const headerDate = res.headers && res.headers.date ? res.headers.date : 'no response date';
     console.log('Status Code:', res.status);
@@ -536,7 +536,7 @@ Pour utiliser le module Got, vous devez l'importer en utilisant la fonction requ
 npm install --save got
 In the below example, we have used the Got module to get the users from the mock API.
 const got = require('got');
-got.get('https://jsonplaceholder.typicode.com/users', {responseType: 'json'})
+got.get('https://raw.githubusercontent.com/webapps-conception/nodejs-requests/refs/heads/master/JSONPlaceholder/users', {responseType: 'json'})
   .then(res => {
     const headerDate = res.headers && res.headers.date ? res.headers.date : 'no response date';
     console.log('Status Code:', res.statusCode);
@@ -572,7 +572,7 @@ Dans l'exemple suivant, nous utiliserons async/await pour effectuer l'appel API 
 const superagent = require('superagent');
 (async () => {
   try {
-    const res = await superagent.get('https://jsonplaceholder.typicode.com/users');
+    const res = await superagent.get('https://raw.githubusercontent.com/webapps-conception/nodejs-requests/refs/heads/master/JSONPlaceholder/users');
     const headerDate = res.headers && res.headers.date ? res.headers.date : 'no response date';
     console.log('Status Code:', res.statusCode);
     console.log('Date in Response header:', headerDate);
@@ -608,7 +608,7 @@ We will call our mock users API using the node in the code below.fetch module.
 const fetch = require('node-fetch');
 (async () => {
   try {
-    const res = await fetch('https://jsonplaceholder.typicode.com/users');
+    const res = await fetch('https://raw.githubusercontent.com/webapps-conception/nodejs-requests/refs/heads/master/JSONPlaceholder/users');
     const headerDate = res.headers && res.headers.get('date') ? res.headers.get('date') : 'no response date';
     console.log('Status Code:', res.status);
     console.log('Date in Response header:', headerDate);
@@ -633,7 +633,6 @@ Voyons en quoi le code ci-dessus est différent du code avec SuperAgent utilisan
 Vous pouvez utiliser le corps de suppression HTTP pour supprimer les ressources spécifiques. Vous trouverez ci-dessous l'exemple de nodejs de corps de requête de suppression http qui supprimera les appels d'API de requête. Voyons le processus complet.
 
 - Créer une application Node.js :
-
 ``` bash
 mkdir my-request-app
 cd my-request-app
@@ -695,9 +694,6 @@ Ensuite, le client envoie la requête (POST) composée des informations de conne
 - SuperAgent
 - GOT
 
-
-``` js
-```
 
 ## Autres projets intéressants
 
