Remise en page de l'article docs/_posts/2024-10-19-ReactJs.md.

--- a/docs/_posts/2024-10-19-ReactJs.md
+++ b/docs/_posts/2024-10-19-ReactJs.md
@@ -9,17 +9,25 @@ tags: react
 Voici les exemples du livre React : Développez le Front End de vos applications web et mobiles avec JavaScript :
 [React Exemples](https://github.com/webapps-conception/livre-react-exemples-save){:target="_blank"}.
 
-Le livre édité en janvier 2020 permet d'acquérir les bases du développement React.js.
+Le livre édité en janvier 2020 permet d'acquérir les bases du développement React.js. Cependant, les technologies évoluent tellement vites qu'il était déjà devenu obsolète lors de mon acquisition en 2022.
 
-Mais les technologies évoluent tellement vites qu'il était déjà devenu obsolète lors de mon acquisition en 2022.
+Exemple avec le chapitre 9 pour la création d'une API avec [Graphcool](https://www.graph.cool/){:target="_blank"}, ce projet qui a pris fin le 1er juillet 2020, ce qui rend le chapitre inutilisable...
 
-Exemple avec le chapitre 9 pour la création d'une API avec Graphcool, ce projet qui a pris fin le 1er juillet 2020, ce qui rend le chapitre inutilisable...
+## GraphQL
 
 Le chapitre GraphQL est intéressant, mais il faut y trouver une application comme pour l'extraction de donnes depuis un CMS sous Wordpress afin de le convertir en site static, qui au passage est beaucoup plus sécurisé qu'un CMS accessible sur Internet.
 
-Il y a aussi des références vers Gatsby qui exploite également la fonctionnalité GraphQl, mais depuis qu'il a fusionné avec Netlify Cloud, la documentation et les exemples ne sont plus aussi accessibles et à jour par rapport aux nouvelles interfaces...
+Il y a aussi des références vers le framework [Gatsby](https://www.gatsbyjs.com/){:target="_blank"} qui exploite également la fonctionnalité GraphQl, mais depuis qu'il a fusionné avec [Netlify Cloud](https://www.netlify.com/){:target="_blank"}, la documentation et les exemples ne sont plus maintenus...
 
-Cependant, le chapitre Redux est très instructif, il m'a permis de concevoir des applications complexes afin d'y stocker les données d'état dans le state, tout en organisant les objects dans un store qui peut être utilisable sur toutes les pages de l'application de manière globale, sans devoir passer le state dans une propriété de chaque composant.
+Cependant, j'ai trouvé deux projets dignes d'intérêt pour exploiter GraphQL :
+
+- Le moteur GraphQL [Hasura](https://hasura.io/){:target="_blank"} est un serveur GraphQL ultra-rapide qui vous offre des API GraphQL instantanées et en temps réel sur [Postgres](https://www.postgresql.org/){:target="_blank"}, avec des déclencheurs webhook sur les événements de base de données et des schémas distants pour la logique métier. Voici un cas d'école : [ebapps-conception/hasura-react-todo-app](https://github.com/webapps-conception/hasura-react-todo-app){:target="_blank"}.
+
+- [Nhost](https://nhost.io/){:target="_blank"} est une alternative open source à Firebase avec GraphQL, conçue avec les éléments suivants à l'esprit : Open Source, GraphQL, SQL, Great Developer Experience : [webapps-conception/nhost-auth](https://github.com/webapps-conception/nhost-auth){:target="_blank"}.
+
+## Redux
+
+Le chapitre Redux est très instructif, il m'a permis de concevoir des applications complexes afin d'y stocker les données d'état dans le state, tout en organisant les objects dans un store qui peut être utilisable sur toutes les pages de l'application de manière globale, sans devoir passer le state dans une propriété de chaque composant. Redux permet de simpler le code, tout en le structurant fonctionnelement.
 
 Pour les détails, je vous invite à consulter le site <https://redux.js.org/>{:target="_blank"}.
 
@@ -39,25 +47,37 @@ Voici deux exemples simples permettant de comprendre le fonctionnement de Redux-
 
 Comme le livre contient tout un chapitre sur la sécurité et la persistance des données avec Firebase, ainsi, j'ai créé un exemple d'utilisation de Redux-Think pour la gestion d'une base de données en temps réel (Realtime database) accessible par une authentification : [webapps-conception/react-firebase-auth-redux](https://github.com/webapps-conception/react-firebase-auth-redux){:target="_blank"}. Pour ceux qui font une alergie à Redux, j'ai également publié un exemple d'authentification Firebase sans la couche Redux : [webapps-conception/react-firebase-auth](https://github.com/webapps-conception/react-firebase-auth){:target="_blank"}.
 
+## Routage
+
+À partir de ce chapitre, je ne traiterai plus les exemples du livres, même si ils sont tout aussi intéressant pour débuter en React.js, mais ils restent assez vieillissant par rapport aux versions actuelles...
+
 [React Router](https://reactrouter.com/en/main){:target="_blank"} est un framework JavaScript qui nous permet de gérer le routage côté client et côté serveur dans les applications React. Il permet la création d'applications Web ou mobiles d'une seule page qui permettent de naviguer sans actualiser la page. Cela nous permet également d'utiliser les fonctionnalités d'historique du navigateur tout en préservant la bonne vue de l'application.
 
 Pour bien compendre le fonctionnement du framework [React Router v6](https://reactrouter.com/en/main/start/tutorial){:target="_blank"}, je vous conseille de suivre le tutoriel : [webapps-conception/react-router-tutorial](https://github.com/webapps-conception/react-router-tutorial){:target="_blank"}.
 
-Pour les amateurs du framework [Bootstrap](https://getbootstrap.com/){:target="_blank"}, voici un exemple compilé par mes soins d'utilisation de [React Bootstrap](https://react-bootstrap.netlify.app/){:target="_blank"} : [webapps-conception/website-react-bootstrap-test](https://github.com/webapps-conception/website-react-bootstrap-test){:target="_blank"} 
+## Formik
 
 Comme j'adore utiliser [Formik](https://formik.org/){:target="_blank"} pour la création de mes formulaires, je vous joins également un exemple d'utilisation : [webapps-conception/react-bootstrap-formik](https://github.com/webapps-conception/react-bootstrap-formik){:target="_blank"}.
 
-Le moteur GraphQL [Hasura](https://hasura.io/){:target="_blank"} est un serveur GraphQL ultra-rapide qui vous offre des API GraphQL instantanées et en temps réel sur [Postgres](https://www.postgresql.org/){:target="_blank"}, avec des déclencheurs webhook sur les événements de base de données et des schémas distants pour la logique métier. Voici un cas d'école : [ebapps-conception/hasura-react-todo-app](https://github.com/webapps-conception/hasura-react-todo-app){:target="_blank"}.
+## Internationalisation avec i18next
 
 Pour créer une application multi-langues, le framework [i18next](https://www.i18next.com/){:target="_blank"} est idéal pour gérer les différentes traductions de vos messages et formulaires. Voici un exemple d'utilisation : [webapps-conception/i18n-translate-react](https://github.com/webapps-conception/i18n-translate-react){:target="_blank"}.
 
+## Bootstrap
+
+Pour les amateurs du framework [Bootstrap](https://getbootstrap.com/){:target="_blank"}, voici un exemple compilé par mes soins d'utilisation de [React Bootstrap](https://react-bootstrap.netlify.app/){:target="_blank"} : [webapps-conception/website-react-bootstrap-test](https://github.com/webapps-conception/website-react-bootstrap-test){:target="_blank"}.
+
+## Authentification
+
 [Auth0](https://auth0.com/){:target="_blank"} est une plateforme utilisée par les entreprises et les développeurs Web pour vérifier l'identité d'un utilisateur avant de lui donner accès à des sites Web et à des applications. Il s'agit d'un moyen flexible, sécurisé et convivial de laisser entrer de véritables clients tout en empêchant les parties malveillantes et frauduleuses d'entrer. Voici un exemple d'utilisation : [webapps-conception/auth0-react-login](https://github.com/webapps-conception/auth0-react-login){:target="_blank"}.
 
-[Nhost](https://nhost.io/){:target="_blank"} est une alternative open source à Firebase avec GraphQL, conçue avec les éléments suivants à l'esprit : Open Source, GraphQL, SQL, Great Developer Experience : [webapps-conception/nhost-auth](https://github.com/webapps-conception/nhost-auth){:target="_blank"}.
+## Framework React Next.js
 
 Voici un kit de démarrage du framework [Next.js](https://nextjs.org/){:target="_blank"} qui utilise [NextAuth.js](https://next-auth.js.org/){:target="_blank"} pour une simple connexion par e-mail + mot de passe, [Prisma](https://www.prisma.io/){:target="_blank"} comme ORM et une base de données [Vercel Postgres](https://vercel.com/storage/postgres){:target="_blank"} pour conserver les données : [webapps-conception/nextjs-postgres-auth-starter](https://github.com/webapps-conception/nextjs-postgres-auth-starter){:target="_blank"}.
 
 Ce projet ajoute une fonctionnalité de commentaires à l'application de blog [Next.js](https://nextjs.org/){:target="_blank"} à l'aide d'[Upstash](https://upstash.com/){:target="_blank"} et d'[Auth0](https://auth0.com/){:target="_blank"} : [webapps-conception/blog-with-comments](https://github.com/webapps-conception/blog-with-comments){:target="_blank"}.
+
+## Prisma
 
 [Quickstart Prisma](https://github.com/webapps-conception/hello-prisma){:target="_blank"} : dans ce guide de démarrage rapide, vous apprendrez comment démarrer avec Prisma à partir de zéro en utilisant un projet TypeScript simple et un fichier de base de données SQLite local. Il couvre la modélisation des données, les migrations et l'interrogation d'une base de données.
 
@@ -66,12 +86,13 @@ Ce projet ajoute une fonctionnalité de commentaires à l'application de blog [N
 - [Build A Fullstack App with Remix, Prisma & MongoDB: Project Setup](https://www.prisma.io/blog/fullstack-remix-prisma-mongodb-1-7D0BfTXBmB6r){:target="_blank"}
 - [GitHub kudos-remix-mongodb-prisma - part-1](https://github.com/sabinadams/kudos-remix-mongodb-prisma/tree/part-1){:target="_blank"}
 
-[MongoDB](https://www.mongodb.com/) is a general purpose, document-based, distributed database built for modern application developers and for the cloud era. This example will show you how to connect to and use MongoDB as your backend for your Next.js app.
+## MongoDB
 
-[webapps-conception/nextjs-with-mongodb](https://github.com/webapps-conception/nextjs-with-mongodb) : Si vous souhaitez en savoir plus sur MongoDB, visitez les pages suivantes :
+[MongoDB](https://www.mongodb.com/) est une base de données distribuée à usage général, basée sur des documents, conçue pour les développeurs d'applications modernes et pour l'ère du cloud. Cet exemple vous montrera comment vous connecter et utiliser MongoDB comme backend pour votre application Next.js.
+
+[webapps-conception/nextjs-with-mongodb](https://github.com/webapps-conception/nextjs-with-mongodb) : Si vous souhaitez en apprendre plus sur MongoDB, visitez les pages suivantes :
 - [How to Integrate MongoDB Into Your Next.js App](https://www.mongodb.com/developer/languages/javascript/nextjs-with-mongodb/){:target="_blank"}
 - [MongoDB Atlas](https://mongodb.com/atlas){:target="_blank"}
 - [MongoDB Documentation](https://docs.mongodb.com/){:target="_blank"}
-
-MongoDB Starter – Répertoire des développeurs : [webapps-conception/mongodb-starter)](https://github.com/webapps-conception/mongodb-starter){:target="_blank"}.
+- MongoDB Starter – Répertoire des développeurs : [webapps-conception/mongodb-starter)](https://github.com/webapps-conception/mongodb-starter){:target="_blank"}.
 
