Ajout du projet github graphql-node-server-basic dans l'article docs/_posts/2024-10-19-NodeJs.md.

--- a/docs/_posts/2024-10-19-NodeJs.md
+++ b/docs/_posts/2024-10-19-NodeJs.md
@@ -705,3 +705,7 @@ Ensuite, le client envoie la requête (POST) composée des informations de conne
 
 - [tRPC](https://trpc.io/){:target="_blank"} garantit la sécurisation du typage de données dans le contexte d'une stack entièrement écrite en Typescript. Avec tRPC, le code source du client importe directement des éléments provenant du code source du serveur pour déterminer les nommages et le typage des procédures en question. Voici un exemple d'utilisation client-serveur : [webapps-conception/tRPC-example](https://github.com/webapps-conception/tRPC-example){:target="_blank"}.
 
+- Test d'accès à des données sur la plateforme [Redis](https://redis.io/fr/){:target="_blank"} : [upstash-redis-node](https://github.com/webapps-conception/upstash-redis-node){:target="_blank"}.
+
+- [graphql-node-server-basic @apollo/server](https://github.com/webapps-conception/graphql-node-server-basic){:target="_blank"}.
+
