Correctif docs/_posts/2024-10-19-LiquidJs.md

--- a/docs/_posts/2024-10-19-LiquidJs.md
+++ b/docs/_posts/2024-10-19-LiquidJs.md
@@ -257,7 +257,7 @@ la valeur par défaut est `false`. Par exemple, lorsqu'elle est définie sur `tr
 
 **preserveTimezones** est un booléen qui n'effectue que des horodatages littéraux. Lorsqu'ils sont définis sur `true`, tous les horodatages littéraux resteront les mêmes lors de la sortie. Il s'agit d'une option d'analyseur, donc les objets Date transmis à LiquidJS en tant que données ne seront pas affectés. Notez que `preserveTimezones` a une priorité plus élevée que `timezoneOffset`.
 
-**dateFormat** est utilisé pour spécifier un format par défaut pour les dates de sortie. `%A, %B %-e, %Y at %-l:%M %P %z` sera utilisé s’il n’est pas spécifié. Par exemple, définissez `dateFormat: %Y-%m-%dT%H:%M:%S:%LZ` pour afficher toutes les dates dans le format [JavaScript Date.toJson()][https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date/toJSON]{:target="_blank"}.
+**dateFormat** est utilisé pour spécifier un format par défaut pour les dates de sortie. `%A, %B %-e, %Y at %-l:%M %P %z` sera utilisé s’il n’est pas spécifié. Par exemple, définissez `dateFormat: %Y-%m-%dT%H:%M:%S:%LZ` pour afficher toutes les dates dans le format [JavaScript Date.toJson()](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date/toJSON){:target="_blank"}.
 
 ### Trimming
 
@@ -289,7 +289,7 @@ Les ordres de paramètres sont ignorés par défaut, car ea `{ % for i in (1..8)
 
 ## Render Files
 
-Pour un projet typique, il peut y avoir un répertoire de fichiers modèles, vous devrez définir le [template root][https://liquidjs.com/api/interfaces/LiquidOptions.html#root){:target="_blank"} et appeler [renderFile](https://liquidjs.com/api/classes/Liquid.html#renderFile){:target="_blank"} ou [renderFileSync](https://liquidjs.com/api/classes/Liquid.html#renderFileSync){:target="_blank"} pour restituer un fichier spécifique.
+Pour un projet typique, il peut y avoir un répertoire de fichiers modèles, vous devrez définir le [template root](https://liquidjs.com/api/interfaces/LiquidOptions.html#root){:target="_blank"} et appeler [renderFile](https://liquidjs.com/api/classes/Liquid.html#renderFile){:target="_blank"} ou [renderFileSync](https://liquidjs.com/api/classes/Liquid.html#renderFileSync){:target="_blank"} pour restituer un fichier spécifique.
 
 ### Render a File
 
