Correctif docs/_posts/2024-10-19-LiquidJs.md

--- a/docs/_posts/2024-10-19-LiquidJs.md
+++ b/docs/_posts/2024-10-19-LiquidJs.md
@@ -160,7 +160,7 @@ const engine = new Liquid({
 })
 ```
 
-> **API Document** : Voici un aperçu de toutes les options. Pour les types et signatures exacts, veuillez vous référer à [LiquidOptions | API](https://liquidjs.com/api/interfaces/LiquidOptions.html){:target="_blank"}.
+> **API Document** : Voici un aperçu de toutes les options. Pour les types et signatures exacts, veuillez vous référer à [LiquidOptions API](https://liquidjs.com/api/interfaces/LiquidOptions.html){:target="_blank"}.
 
 ### Cache
 
