--- a/docs/_posts/2024-10-19-LiquidJs.md
+++ b/docs/_posts/2024-10-19-LiquidJs.md
@@ -15,7 +15,7 @@ LiquidJS est un moteur de modèles compatible [Shopify](https://github.com/Shopi
 
 La syntaxe LiquidJS est relativement simple. Il existe 2 types de balises dans LiquidJS :
 
-- **Tags** : Une balise se compose d'un nom de balise et d'arguments facultatifs entourés entre `{{ "{%" }}` et `{{ "%}" }}`.
+- **Tags** : Une balise se compose d'un nom de balise et d'arguments facultatifs entourés entre `&#123;%` et ` %&#125;`.
 - **Outputs** : Une sortie consiste en une valeur et une liste de filtres, facultative, entourée entre `{{` et `}}`.
 
 > **Live Demo** : Before going into the details, here’s a live demo to play around: https://liquidjs.com/playground.html.
@@ -46,17 +46,17 @@ Les `Tags` sont utilisées pour contrôler le processus de rendu du modèle, la 
 
 
 ``` js
-{ % assign foo = "FOO" % }
+&#123;% assign foo = "FOO" %&#125;
 ```
 
 Généralement, les balises apparaissent par paires avec une balise de début et une balise de fin correspondante. Par exemple:
 
 ``` js
-{ % if foo == "FOO" % }
+&#123;% if foo == "FOO" %&#125;
     Variable `foo` equals "FOO"
-{ % else % }
+&#123;% else %&#125;
     Variable `foo` not equals "FOO"
-{ % endif % }
+&#123;% endif %&#125;
 ```
 
 Une liste complète des balises prises en charge par LiquidJS peut être trouvée [ici](https://liquidjs.com/tags/overview.html){:target="_blank"}.
@@ -174,11 +174,11 @@ De plus, il peut également s'agir d'une implémentation de cache personnalisée
 
 **root** est utilisé pour spécifier les répertoires de modèles permettant à LiquidJS de rechercher et de lire les fichiers de modèles. Peut être une chaîne unique ou un tableau de chaînes. Voir [Render Files](https://liquidjs.com/tutorials/render-file.html){:target="_blank"} pour plus de détails.
 
-**layouts** est utilisé pour spécifier des répertoires de modèles pour que LiquidJS recherche des fichiers pour `{ % layout % }`. Même format que `root` et sera par défaut `root` s'il n'est pas spécifié.
+**layouts** est utilisé pour spécifier des répertoires de modèles pour que LiquidJS recherche des fichiers pour `&#123;% layout %&#125;`. Même format que `root` et sera par défaut `root` s'il n'est pas spécifié.
 
-**partials** est utilisé pour spécifier des répertoires de modèles pour que LiquidJS recherche des fichiers pour `{ % render % }` et `{ % include % }`. Même format que `root` et sera par défaut `root` s'il n'est pas spécifié.
+**partials** est utilisé pour spécifier des répertoires de modèles pour que LiquidJS recherche des fichiers pour `&#123;% render %&#125;` et `&#123;% include %&#125;`. Même format que `root` et sera par défaut `root` s'il n'est pas spécifié.
 
-**relativeReference** est défini sur `true` par défaut pour autoriser les noms de fichiers relatifs. Notez que les fichiers relativement référencés doivent également se trouver dans la racine correspondante. Par exemple, vous pouvez référencer un autre fichier comme `{ % render ../foo/bar % }` tant que `../foo/bar` se trouve également dans le répertoire `partials`.
+**relativeReference** est défini sur `true` par défaut pour autoriser les noms de fichiers relatifs. Notez que les fichiers relativement référencés doivent également se trouver dans la racine correspondante. Par exemple, vous pouvez référencer un autre fichier comme `&#123;% render ../foo/bar %&#125;` tant que `../foo/bar` se trouve également dans le répertoire `partials`.
 
 ### dynamicPartials
 
@@ -187,13 +187,13 @@ De plus, il peut également s'agir d'une implémentation de cache personnalisée
 **dynamicPartials** indique s'il faut ou non traiter les arguments de nom de fichier dans les balises include, render et layout comme une variable. La valeur par défaut est `true`. Par exemple, le rendu de l'extrait suivant avec scope `{ file: 'foo.html' }` inclura le `foo.html` :
 
 ``` js
-{ % include file % }
+&#123;% include file %&#125;
 ```
 
 En définissant `dynamicPartials: false`, LiquidJS essaiera d'inclure le fichier nommé `file`, ce qui est étrange mais permet une syntaxe plus simple si vos relations de modèle sont statiques :
 
 ``` js
-{ % liquid foo.html % }
+&#123;% liquid foo.html %&#125;
 ```
 > **Piège courant** : LiquidJS définit par défaut cette option sur `true` pour être compatible avec shopify/liquid, mais si vous venez de [eleventy](https://github.com/11ty/eleventy){:target="_blank"}, elle est définie sur `false` par défaut (voir [Quoted Include Paths](https://www.11ty.dev/docs/languages/liquid/#quoted-include-paths){:target="_blank"}) qui, je crois, essaie d'être compatible avec Jekyll.
 
@@ -209,7 +209,7 @@ Par exemple, dans le modèle suivant, `name.html` n'est pas cité, `header` et `
 
 ``` html
 // entry template
-{ % include article.html header="HEADER" content="CONTENT" % }
+&#123;% include article.html header="HEADER" content="CONTENT" %&#125;
 
 // article.html
 <article>
@@ -223,8 +223,8 @@ Par exemple, dans le modèle suivant, `name.html` n'est pas cité, `header` et `
 `extname` définit le nom d'extension par défaut à ajouter aux noms de fichiers si le nom de fichier n'a pas de nom d'extension. La valeur par défaut est `''`, ce qui signifie qu'il est désactivé par défaut. En le réglant sur `.liquid` :
 
 ``` html
-{ % render "foo" % }  there's no extname, adds `.liquid` and loads foo.liquid
-{ % render "foo.html" % }  there is an extname already, loads foo.html directly
+&#123;% render "foo" %&#125;  there's no extname, adds `.liquid` and loads foo.liquid
+&#123;% render "foo.html" %&#125;  there is an extname already, loads foo.html directly
 ```
 
 > **Legacy Versions** : Avant la version 2.0.1, `extname est défini par défaut sur `.liquid`. Pour changer cela, vous devez définir explicitement `extname: ''`. Voir [#41](https://github.com/harttle/liquidjs/issues/41){:target="_blank"} pour plus de détails.
@@ -285,7 +285,7 @@ Les options **greedy**, **trimOutputLeft**, **trimOutputRight**, **trimTagLeft**
 
 ### Parameter Order
 
-Les ordres de paramètres sont ignorés par défaut, car ea `{ % for i in (1..8) reversed limit:3 % }` exécutera toujours la `limit` avant `reversed`, même si `reversed` se produit avant la `limit`. Pour que l'ordre des paramètres soit respecté, définissez **orderedFilterParameters** sur `true`. Sa valeur par défaut est `false`.
+Les ordres de paramètres sont ignorés par défaut, car ea `&#123;% for i in (1..8) reversed limit:3 %&#125;` exécutera toujours la `limit` avant `reversed`, même si `reversed` se produit avant la `limit`. Pour que l'ordre des paramètres soit respecté, définissez **orderedFilterParameters** sur `true`. Sa valeur par défaut est `false`.
 
 ## Render Files
 
@@ -339,7 +339,7 @@ var engine = new Liquid({
 
 > **Chemins relatifs** : Les chemins relatifs dans `root` seront résolus par rapport à `cwd()`.
 
-Lorsque `{ % render "foo" % }` est rendu ou que `liquid.renderFile('foo')` est appelé, les fichiers suivants seront recherchés et le premier fichier existant sera utilisé :
+Lorsque `&#123;% render "foo" %&#125;` est rendu ou que `liquid.renderFile('foo')` est appelé, les fichiers suivants seront recherchés et le premier fichier existant sera utilisé :
 
 - `cwd()`/views/foo.liquid
 - `cwd()`/views/partials/foo.liquid
@@ -394,7 +394,7 @@ Pour faciliter le rendu sans fichiers, il existe une option de `templates` perme
 ``` js
 const engine = new Liquid({
   templates: {
-    'views/entry': 'header { % include "../partials/footer" % }',
+    'views/entry': 'header &#123;% include "../partials/footer" %&#125;',
     'partials/footer': 'footer'
   }
 })
@@ -414,10 +414,10 @@ Pour les fichiers modèles suivants :
 color: '{{ color }}' shape: '{{ shape }}'
 
 // file: theme.liquid
-{ % assign shape = 'circle' % }
-{ % render 'color.liquid' % }
-{ % render 'color.liquid' with 'red' % }
-{ % render 'color.liquid', color: 'yellow', shape: 'square' % }
+&#123;% assign shape = 'circle' %&#125;
+&#123;% render 'color.liquid' %&#125;
+&#123;% render 'color.liquid' with 'red' %&#125;
+&#123;% render 'color.liquid', color: 'yellow', shape: 'square' %&#125;
 ```
 
 Le résultat sera :
@@ -438,12 +438,12 @@ Pour les fichiers modèles suivants :
 ``` js
 // file: default-layout.liquid
 Header
-{ % block content % }My default content{ % endblock % }
+&#123;% block content %&#125;My default content&#123;% endblock %&#125;
 Footer
 
 // file: page.liquid
-{ % layout "default-layout.liquid" % }
-{ % block content % }My page content{ % endblock % }
+&#123;% layout "default-layout.liquid" %&#125;
+&#123;% block content %&#125;My page content&#123;% endblock %&#125;
 ```
 
 La sortie de `page.liquid` :
@@ -605,15 +605,15 @@ Sortie :
 
 ### Liquid Escape
 
-Pour désactiver le langage Liquid et les chaînes de sortie telles que `{ {` et `{ %`, la balise [raw](https://liquidjs.com/filters/raw.html){:target="_blank"} peut être utilisée.
+Pour désactiver le langage Liquid et les chaînes de sortie telles que `{ {` et `&#123;%`, la balise [raw](https://liquidjs.com/filters/raw.html){:target="_blank"} peut être utilisée.
 
 Saisir :
 
 ``` js
-{ % raw % }
+&#123;% raw %&#125;
   In LiquidJS, {{ this | escape }} will be HTML-escaped, but
   {{{ that }}} will not.
-{ % endraw % }
+&#123;% endraw %&#125;
 ```
 
 Sortie :
@@ -640,7 +640,7 @@ Sortie :
 ### Register Tags
 
 ``` js
-// Usage: { % upper name % }
+// Usage: &#123;% upper name %&#125;
 import { Value, TagToken, Context, Emitter, TopLevelToken } from 'liquidjs'
 
 engine.registerTag('upper', {
@@ -660,7 +660,7 @@ engine.registerTag('upper', {
 Pour une implémentation de balises complexe, vous pouvez également fournir une classe de balises :
 
 ``` js
-// Usage: { % upper name:"alice" % }
+// Usage: &#123;% upper name:"alice" %&#125;
 import { Hash, Tag, TagToken, Context, Emitter, TopLevelToken, Liquid } from 'liquidjs'
 
 engine.registerTag('upper', class UpperTag extends Tag {
@@ -750,7 +750,7 @@ Voir ce JSFiddle : <https://jsfiddle.net/ctj364up/1/>{:target="_blank"}
 Comme indiqué dans [Register Filters/Tags](https://liquidjs.com/tutorials/register-filters-tags.html){:target="_blank"}, les paramètres de balise sont disponibles sur `tagToken.args` sous forme de chaîne raw. Par exemple:
 
 ``` js
-// Usage: { % random foo bar coo % }
+// Usage: &#123;% random foo bar coo %&#125;
 // Output: "foo", "bar" or "coo"
 engine.registerTag('random', {
   parse(tagToken) {
@@ -775,7 +775,7 @@ Parfois, nous avons besoin de balises plus dynamiques et souhaitons transmettre 
 Le modèle modifié suivant contient également 3 valeurs aléatoires, mais ce sont des valeurs au lieu de chaînes statiques. Le premier est une chaîne littérale, le deuxième est un identifiant, le troisième est une séquence d'accès à la propriété contenant deux identifiants.
 
 ``` js
-{ % random "foo" bar obj.coo % }
+&#123;% random "foo" bar obj.coo %&#125;
 ```
 
 Il peut être difficile d'analyser tous ces cas manuellement, mais il existe une classe [Tokenizer](https://liquidjs.com/api/classes/Tokenizer.html){:target="_blank"} dans LiquidJS que vous pouvez utiliser.
@@ -810,7 +810,7 @@ L'appel de cette balise dans scope `{ bar: "bar", obj: { coo: "coo" } }` donne e
 Les paramètres nommés deviennent très pratiques lorsqu’il y a des paramètres facultatifs ou de nombreux paramètres, auquel cas l’ordre des paramètres n’a pas d’importance. C’est exactement pour cela que la classe Hash a été inventée.
 
 ``` js
-{ % random from:2, to:max % }
+&#123;% random from:2, to:max %&#125;
 ```
 
 Dans l'exemple ci-dessus, nous essayons de générer un nombre aléatoire dans la plage [2, max]. Nous utiliserons `Hash` pour analyser les paramètres `from` et `to`.
@@ -833,7 +833,7 @@ engine.registerTag('random', {
 })
 ```
 
-Le rendu de `{ % random from:2, to:max % }` dans la portée `{ max: 10 }` générera un nombre aléatoire dans la plage [2, 10]. Voir ce JSFiddle : <https://jsfiddle.net/ctj364up/4/>{:target="_blank"}
+Le rendu de `&#123;% random from:2, to:max %&#125;` dans la portée `{ max: 10 }` générera un nombre aléatoire dans la plage [2, 10]. Voir ce JSFiddle : <https://jsfiddle.net/ctj364up/4/>{:target="_blank"}
 
 ## Render Tag Content
 
@@ -844,9 +844,9 @@ Les balises personnalisées peuvent avoir un modèle de contenu et peuvent être
 Nous commencerons avec une balise simple `wrap` qui enveloppe son contenu dans un élément `<div class="wrapper"></div>` :
 
 ``` js
-{ % wrap % }
+&#123;% wrap %&#125;
   {{ "hello world!" | capitalize }}
-{ % endwrap % }
+&#123;% endwrap %&#125;
 ```
 
 Résultat attendu :
@@ -859,8 +859,8 @@ Résultat attendu :
 
 Tout d'abord, [register](https://liquidjs.com/tutorials/register-filters-tags.html){:target="_blank"} une balise avec le nom `wrap` et analysez le contenu dans `this.tpls`. Ici dans `parse(tagToken, remainTokens)`,
 
-- `tagToken` est le jeton actuel `{ % wrap % }`, et
-- `remainTokens` est un tableau de tous les jetons suivant `{ % wrap % }` jusqu'à la fin de ce fichier modèle.
+- `tagToken` est le jeton actuel `&#123;% wrap %&#125;`, et
+- `remainTokens` est un tableau de tous les jetons suivant `&#123;% wrap %&#125;` jusqu'à la fin de ce fichier modèle.
 
 En gros, ce que nous devons faire est de prendre `.shift()` suffisamment de balises jusqu'à `remainTokens` ce que nous obtenions un jeton `endwrap` (le nom peut être arbitraire, mais par convention, nous avons besoin qu'il soit `endwrap`). Et s'il n'y a pas de `endwrap` jusqu'à la fin du fichier modèle, nous devons lancer un tag-not-closed `Error`.
 
@@ -878,7 +878,7 @@ engine.registerTag('wrap', {
       }
       // parse token into template
       // parseToken() may consume more than 1 tokens
-      // e.g. { % if % }...{ % endif % }
+      // e.g. &#123;% if %&#125;...&#123;% endif %&#125;
       let tpl = this.liquid.parser.parseToken(token, remainTokens)
       this.tpls.push(tpl)
     }
@@ -917,9 +917,9 @@ Voici une version JSFiddle : <https://jsfiddle.net/por0zcn1/4/>{:target="_blank"
 La balise `wrap` ci-dessus ne semble pas très utile, sans utiliser cette balise, nous pouvons de toute façon restituer le contenu. Nous allons maintenant implémenter une balise `repeat` pour restituer le contenu 2 fois (nous pouvons également ajouter un paramètre pour restituer des fois arbitraires).
 
 ``` js
-{ % repeat % }
+&#123;% repeat %&#125;
   {{ repeat.i }}. {{ "hello world!" | capitalize }}
-{ % endrepeat % }`
+&#123;% endrepeat %&#125;`
 ```
 
 Résultats attendus :
@@ -1116,9 +1116,9 @@ LiquidJS lui-même implémente plusieurs gouttes intégrées pour faciliter l'é
 Utile pour vérifier si une variable de chaîne est `false`, `null`, `undefined`, une chaîne vide ou une chaîne contenant uniquement des caractères vides.
 
 ``` js
-{ % unless author == blank % }
+&#123;% unless author == blank %&#125;
     {{author}}
-{ % endif % }
+&#123;% endif %&#125;
 ```
 
 #### empty
@@ -1126,9 +1126,9 @@ Utile pour vérifier si une variable de chaîne est `false`, `null`, `undefined`
 Utile pour vérifier si un tableau, une chaîne ou un objet est vide.
 
 ``` js
-{ % if authors == empty % }
+&#123;% if authors == empty %&#125;
     Author list is empty
-{ % endif % }
+&#123;% endif %&#125;
 ```
 
 > `empty` mise en œuvre : Pour les tableaux et les chaînes, LiquidJS vérifie leurs `.length` propriétés. Pour les objets, LiquidJS effectue des appels `Object.keys()` pour vérifier s'ils ont des clés.
@@ -1138,9 +1138,9 @@ Utile pour vérifier si un tableau, une chaîne ou un objet est vide.
 `nil` Drop est utilisé pour vérifier si une variable n'est pas définie ou définie comme `null` ou `undefined`, essentiellement équivalent à `== null` la vérification JavaScript.
 
 ``` js
-{ % if nonexistent == nil % }
+&#123;% if nonexistent == nil %&#125;
     null variable
-{ % endif % }
+&#123;% endif %&#125;
 ```
 
 ### Other Drops
@@ -1176,7 +1176,7 @@ LiquidJS utilise une implémentation asynchrone basée sur un générateur pour 
 ``` js
 import { TagToken, Context, Emitter, TopLevelToken, Value, Tag, Liquid } from 'liquidjs'
 
-// Usage: { % upper "alice" % }
+// Usage: &#123;% upper "alice" %&#125;
 // Output: ALICE
 engine.registerTag('upper', class UpperTag extends Tag {
   private value: Value
@@ -1220,7 +1220,7 @@ Vous pouvez convertir un générateur en promesse en utilisant [toPromise](https
 ``` js
 import { TagToken, Context, Emitter, TopLevelToken, Value, Tag, Liquid, toPromise } from 'liquidjs'
 
-// Usage: { % upper "alice" % }
+// Usage: &#123;% upper "alice" %&#125;
 // Output: ALICE
 engine.registerTag('upper', class UpperTag extends Tag {
   private value: Value
@@ -1242,7 +1242,7 @@ Si votre balise est destinée à être utilisée uniquement de manière asynchro
 ``` js
 import { toPromise, TagToken, Context, Emitter, TopLevelToken, Value, Tag, Liquid } from 'liquidjs'
 
-// Usage: { % upper "alice" % }
+// Usage: &#123;% upper "alice" %&#125;
 // Output: ALICE
 engine.registerTag('upper', class UpperTag extends Tag {
   private value: Value
@@ -1266,7 +1266,7 @@ Pour garder le code source propre et indenté, nous ajoutons des espaces à nos 
 Par défaut, toutes les balises et lignes de balisage de sortie génèrent un NL (`\n`) et des espaces s'il y a une indentation. Par exemple :
 
 ``` js
-{ %  author = "harttle" % }
+&#123;%  author = "harttle" %&#125;
 {{ author }}
 ```
 
@@ -1276,10 +1276,10 @@ Sorties (notez le lien vide) :
 harttle
 ```
 
-Nous pouvons inclure des tirets dans la syntaxe de votre balise (`{{-`, `-}}`, `{ %-`, `-% }`) pour supprimer les espaces à gauche ou à droite. Par exemple :
+Nous pouvons inclure des tirets dans la syntaxe de votre balise (`{{-`, `-}}`, `&#123;%-`, `-%&#125;`) pour supprimer les espaces à gauche ou à droite. Par exemple :
 
 ``` js
-{ % assign author = "harttle" -% }
+&#123;% assign author = "harttle" -%&#125;
 {{ author }}
 ```
 
@@ -1289,7 +1289,7 @@ Résultats :
 harttle
 ```
 
-Dans ce cas, il `-% }` supprime l'espace blanc du côté droit de la `assign` balise.
+Dans ce cas, il `-%&#125;` supprime l'espace blanc du côté droit de la `assign` balise.
 
 ### via Options
 
@@ -1436,9 +1436,9 @@ Un PC typique gère `1e8` (100 M) de caractères sans problème.
 Restreindre la taille du modèle seul n'est pas suffisant car des boucles dynamiques avec un grand nombre peuvent se produire au moment du rendu. [renderLimit](https://liquidjs.com/api/interfaces/LiquidOptions.html#renderLimit){:target="_blank"} atténue ce problème en limitant le temps consommé par chaque `render()` appel.
 
 ``` js
-{ %- for i in (1..10000000) -% }
+&#123;%- for i in (1..10000000) -%&#125;
     order: {{i}}
-{ %- endfor -% }
+&#123;%- endfor -%&#125;
 ```
 
 Le temps de rendu est vérifié pour chaque modèle (avant le rendu de chaque modèle). Dans l'exemple ci-dessus, il y a 2 modèles dans la boucle : `order:` et `{{i}}`, le temps de rendu sera vérifié 10000000x2 fois.
@@ -1450,10 +1450,10 @@ Pour les balises et les filtres chronophages au sein d'un seul modèle, le proce
 Même avec un nombre réduit de modèles et d'itérations, l'utilisation de la mémoire peut augmenter de manière exponentielle. Dans l'exemple suivant, la mémoire double à chaque itération :
 
 ``` js
-{ % assign array = "1,2,3" | split: "," % }
-{ % for i in (1..32) % }
-    { % assign array = array | concat: array % }
-{ % endfor % }
+&#123;% assign array = "1,2,3" | split: "," %&#125;
+&#123;% for i in (1..32) %&#125;
+    &#123;% assign array = array | concat: array %&#125;
+&#123;% endfor %&#125;
 ```
 
 [memoryLimit](https://liquidjs.com/api/interfaces/LiquidOptions.html#memoryLimit){:target="_blank"} limite les filtres sensibles à la mémoire pour éviter une allocation de mémoire excessive. Comme [JavaScript utilise GC pour gérer la mémoire](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Memory_management){:target="_blank"}, `memoryLimit` limite uniquement le nombre total d'objets alloués par les filtres sensibles à la mémoire dans LiquidJS et peut donc ne pas refléter l'empreinte mémoire réelle.
