Remise en place de la syntaxe { % et % }

--- a/docs/_posts/2024-10-19-LiquidJs.md
+++ b/docs/_posts/2024-10-19-LiquidJs.md
@@ -15,7 +15,7 @@ LiquidJS est un moteur de modèles compatible [Shopify](https://github.com/Shopi
 
 La syntaxe LiquidJS est relativement simple. Il existe 2 types de balises dans LiquidJS :
 
-- **Tags** : Une balise se compose d'un nom de balise et d'arguments facultatifs entourés entre `{``%` et ` % }`.
+- **Tags** : Une balise se compose d'un nom de balise et d'arguments facultatifs entourés entre `{ %` et `% }`.
 - **Outputs** : Une sortie consiste en une valeur et une liste de filtres, facultative, entourée entre `{{` et `}}`.
 
 > **Live Demo** : Before going into the details, here’s a live demo to play around: https://liquidjs.com/playground.html.
